rust/crates/ccusage-adapter-all/src/snapshots/csusage_adapter_all__tests__dsh_fixture_daily_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&daily.rows,\nAgentReportKind::Daily, &daily.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Date",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "1970-01-01",
        "All",
        "",
        "650",
        "65",
        "0",
        "0",
        "715",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- DSH",
        "- deepseek-flash\n- glm-5.3-flash",
        "650",
        "65",
        "0",
        "0",
        "715",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "650",
        "65",
        "0",
        "0",
        "715",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Daily\nDetected: DSH"
}
