rust/crates/ccusage-adapter-all/src/snapshots/csusage_adapter_all__tests__openhands_fixture_daily_json.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "report_json(&daily.rows, AgentReportKind::Daily)"
---
{
  "daily": [
    {
      "agent": "all",
      "cacheCreationTokens": 10,
      "cacheReadTokens": 30,
      "inputTokens": 200,
      "metadata": {
        "agents": [
          "openhands"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 10,
          "cacheReadTokens": 30,
          "cost": 1.5,
          "inputTokens": 200,
          "modelName": "gpt-5",
          "outputTokens": 20
        },
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0,
          "inputTokens": 0,
          "modelName": "gpt-5-mini",
          "outputTokens": 0
        }
      ],
      "modelsUsed": [
        "gpt-5",
        "gpt-5-mini"
      ],
      "outputTokens": 20,
      "period": "2026-01-02",
      "totalCost": 1.5,
      "totalTokens": 260
    },
    {
      "agent": "all",
      "cacheCreationTokens": 0,
      "cacheReadTokens": 0,
      "inputTokens": 50,
      "metadata": {
        "agents": [
          "openhands"
        ]
      },
      "modelBreakdowns": [
        {
          "cacheCreationTokens": 0,
          "cacheReadTokens": 0,
          "cost": 0.0,
          "inputTokens": 50,
          "modelName": "claude-sonnet-4-5",
          "outputTokens": 5
        }
      ],
      "modelsUsed": [
        "claude-sonnet-4-5"
      ],
      "outputTokens": 5,
      "period": "2026-01-03",
      "totalCost": 0,
      "totalTokens": 55
    }
  ],
  "totals": {
    "cacheCreationTokens": 10,
    "cacheReadTokens": 30,
    "inputTokens": 250,
    "outputTokens": 25,
    "totalCost": 1.5,
    "totalTokens": 315
  }
}
