rust/crates/ccusage-adapter-all/src/snapshots/csusage_adapter_all__tests__openhands_fixture_daily_table.snap
---
source: crates/ccusage-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&daily.rows,\nAgentReportKind::Daily, &daily.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Date",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2026-01-02",
        "All",
        "",
        "200",
        "20",
        "10",
        "30",
        "260",
        "$1.50"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- OpenHands",
        "- gpt-5\n- gpt-5-mini",
        "200",
        "20",
        "10",
        "30",
        "260",
        "$1.50"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "2026-01-03",
        "All",
        "",
        "50",
        "5",
        "0",
        "0",
        "55",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- OpenHands",
        "- sonnet-4-5",
        "50",
        "5",
        "0",
        "0",
        "55",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "250",
        "25",
        "10",
        "30",
        "315",
        "$1.50"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Daily\nDetected: OpenHands"
}
